FreedomSanboxAntDeploy/src/objects/Profiler_Score_Card__c.object
<CustomObject>
    <description>Created to generate score card for profiler question-answers</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Profiler Score Cards</relationshipLabel>
        <relationshipName>Profiler_Score_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank</label>
        <referenceTo>Question_Bank__c</referenceTo>
        <relationshipLabel>Profiler Score Cards</relationshipLabel>
        <relationshipName>Profiler_Score_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Profile__c</fullName>
        <formula>IF ((Score__c &lt;= 35 &amp;&amp; Score__c &gt; 0), &apos;Low&apos;,
IF ((Score__c &lt;= 55 &amp;&amp; Score__c &gt; 35), &apos;Medium&apos;,
IF ((Score__c &gt; 55), &apos;High&apos;, NULL
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Sum up the score of all the scores from each profiler card details</description>
        <label>Score</label>
        <summarizedField>Profiler_Card_Detail__c.Score__c</summarizedField>
        <summaryForeignKey>Profiler_Card_Detail__c.Profiler_Score_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Profiler Score Card</label>
    <nameField>
        <label>Profiler Score Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profiler Score Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>